--- a/index.html
+++ b/index.html
@@ -3,10 +3,150 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css' integrity='sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==' crossorigin='anonymous'/>
   <link rel="stylesheet" href="./css/style.css">
   <title>Boolando</title>
 </head>
 <body>
-  
+
+  <header class="flex">
+
+    <nav class="wrapper flex">
+      <ul class="wrapper flex ai-center">
+        <li><a href="#">Donna</a></li>
+        <li><a href="#">Uomo</a></li>
+        <li><a href="#">Bambini</a></li>
+      </ul>
+      <div class="flex wrapper center">
+        <img class="logo wrapper flex" src="./assets/img/boolean-logo.png" alt="logo">
+      </div>
+
+      <div class="wrapper flex">
+        <ul class="flex center">
+          <li><a href="#"><i class="fa-regular fa-user"></i></a></li>
+          <li><a href="#"><i class="fa-regular fa-heart"></i></a></li>
+          <li><a href="#"><i class="fa-solid fa-bag-shopping"></i></a></li>
+        </ul>
+      </div>
+    </nav>
+
+  </header>
+
+  <main>
+    <section class="wrapper flex wrap">
+      <div class="cards">
+        <div class="img flex row relative">
+          <img class="primary-image" src="./assets/img/1.webp" alt="1">
+          <img class="secondary-image" src="./assets/img/1b.webp" alt="1b">
+          <div class="heart">
+            <i class="fa-solid fa-heart"></i>
+          </div>
+          <div class="absolute-red">
+            -50%
+          </div>
+          <div class="absolute-green-second">
+            Sostenibilit&aacute;
+          </div>
+        </div>
+        <div class="text">
+          <p>Levi's</p>
+          <h4>RELAXED FIT TEE UNISEX</h4>
+          <span class="red-text">14,99&euro; </span>
+          <span class="lt"> 29,99&euro;</span>
+        </div>
+        
+      </div>
+      <div class="cards">
+        <div class="img flex row relative">
+          <img class="primary-image" src="./assets/img/2.webp" alt="2">
+          <img class="secondary-image" src="./assets/img/2b.webp" alt="2b">
+          <div class="heart">
+            <i class="fa-solid fa-heart"></i>
+          </div>
+          <div class="absolute-red">
+            -30%
+          </div>
+        </div>
+        <div class="text">
+          <p>Guess</p>
+          <h4>ROSES TEE</h4>
+          <span class="red-text">20,99&euro; </span>
+          <span class="lt"> 29,99&euro;</span>
+        </div>
+      </div>
+      <div class="cards">
+        <div class="img flex row relative">
+          <img class="primary-image" src="./assets/img/3.webp" alt="3">
+          <img class="secondary-image" src="./assets/img/3b.webp" alt="3b">
+          <div class="heart">
+            <i class="fa-solid fa-heart"></i>
+          </div>
+          <div class="absolute-red">
+            -30%
+          </div>
+        </div>
+        <div class="text">
+          <p>Come Zucchero Filato</p>
+          <h4>VOGLIA DI COLORI PASTELLO</h4>
+          <span class="red-text">129,99&euro; </span>
+          <span class="lt"> 184,99&euro;</span>
+        </div>
+      </div>
+      <div class="cards">
+        <div class="img flex row relative">
+          <img class="primary-image" src="./assets/img/4.webp" alt="4">
+          <img class="secondary-image" src="./assets/img/4b.webp" alt="4b">
+          <div class="heart">
+            <i class="fa-solid fa-heart"></i>
+          </div>
+          <div class="absolute-red">
+            -50%
+          </div>
+          <div class="absolute-green-second">
+            Sostenibilit&aacute;
+          </div>
+        </div>
+        <div class="text">
+          <p>Levi's</p>
+          <h4>TEE UNISEX</h4>
+          <span class="red-text">14,99&euro;</span>
+          <span class="lt"> 29,99&euro;</span>
+        </div>
+      </div>
+      <div class="cards">
+        <div class="img flex row relative">
+          <img class="primary-image" src="./assets/img/5.webp" alt="5">
+          <img class="secondary-image" src="./assets/img/5b.webp" alt="5b">
+          <div class="heart">
+            <i class="fa-solid fa-heart"></i>
+          </div>
+        </div>
+        <div class="text">
+          <p>Maya Deluxe</p>
+          <h4>STRIPE BODICE</h4>
+          <span class="red-text">99,99&euro;</span>
+        </div>
+      </div>
+      <div class="cards">
+        <div class="img flex row relative">
+          <img class="primary-image" src="./assets/img/6.webp" alt="6">
+          <img class="secondary-image" src="./assets/img/6b.webp" alt="6b">
+          <div class="heart">
+            <i class="fa-solid fa-heart"></i>
+          </div>
+          <div class="absolute-green">
+            Sostenibilit&aacute;
+          </div>
+        </div>
+        <div class="text">
+          <p>Esprit</p>
+          <h4>MAGLIONE - BLACK</h4>
+          <span class="red-text">29,99&euro;</span>
+        </div>
+      </div>
+      
+    </section>
+  </main>
+
 </body>
 </html>
