--- a/index.html
+++ b/index.html
@@ -148,5 +148,32 @@
     </section>
   </main>
 
+  <footer>
+    <section class="wrapper">
+
+      <div class="box">
+        <div class="flex">
+          <h5>Boolando s.r.l</h5>
+        </div>
+        <ul class="flex">
+          <li><a href="#">Informazioni legali</a></li>
+          <li><a href="#">Informativa sulla privacy</a></li>
+          <li><a href="#">Diritto di recesso</a></li>
+        </ul>
+      </div>
+      <div class="box">
+        <ul class="flex">
+          <li><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
+          <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+          <li><a href="#"><i class="fa-brands fa-square-instagram"></i></a></li>
+          <li><a href="#"><i class="fa-brands fa-square-pinterest"></i></a></li>
+          <li><a href="#"><i class="fa-brands fa-square-youtube"></i></a></li>
+        </ul>
+      </div>
+    </section>
+  </footer>
+
+
+
 </body>
 </html>
